// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`estilo das telas no tema dark lista com assinatura: lista com assinatura 1`] = `
[
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#1B263B",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#F7F7F4",
    "borderColor": "rgba(65, 90, 119, 0.22)",
    "borderRadius": 8,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": "100%",
    "width": "100%",
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4279969339,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "numberOfLines": 1,
    "texto": "Rubrica",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 13,
    "fontVariant": [
      "tabular-nums",
    ],
    "texto": "Criada em 12/09/2026",
  },
  {
    "elemento": "controle",
    "height": 44,
    "papel": "button",
    "width": 44,
  },
  {
    "elemento": "svg",
    "height": 22,
    "width": 22,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeWidth": 1.8,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4279049002,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Nova assinatura",
  },
]
`;

exports[`estilo das telas no tema dark lista vazia e nova assinatura em pé e deitada: lista vazia 1`] = `
[
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "textAlign": "center",
    "texto": "Nenhuma assinatura salva. Toque em Nova assinatura para desenhar a primeira.",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4279049002,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Nova assinatura",
  },
]
`;

exports[`estilo das telas no tema dark lista vazia e nova assinatura em pé e deitada: nova assinatura 1`] = `
[
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Nome",
  },
  {
    "backgroundColor": "#1B263B",
    "borderColor": "rgba(119, 141, 169, 0.28)",
    "borderRadius": 8,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "color": "#E0E1DD",
    "elemento": "campo",
    "fontSize": 16,
    "placeholderTextColor": "#778DA9",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Assinatura",
  },
  {
    "borderColor": "#778DA9",
    "borderRadius": 8,
    "borderWidth": 1.5,
    "elemento": "controle",
    "minHeight": 44,
    "paddingHorizontal": 12,
    "paddingVertical": 6,
    "papel": "button",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "fontWeight": "600",
    "texto": "Deitar papel",
  },
  {
    "backgroundColor": "#F7F7F4",
    "borderColor": "rgba(65, 90, 119, 0.22)",
    "borderRadius": 14,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": "100%",
    "width": "100%",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 20,
    "fontWeight": "600",
    "texto": "X",
  },
  {
    "backgroundColor": "#778DA9",
    "elemento": "superfície",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "textAlign": "center",
    "texto": "Assine acima da linha",
  },
  {
    "borderColor": "#778DA9",
    "borderRadius": 8,
    "borderWidth": 1.5,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 10.5,
    "papel": "button",
    "width": "100%",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Limpar",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Salvar",
  },
]
`;

exports[`estilo das telas no tema dark lista vazia e nova assinatura em pé e deitada: nova assinatura deitada 1`] = `
[
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Assinatura",
  },
  {
    "borderColor": "#778DA9",
    "borderRadius": 8,
    "borderWidth": 1.5,
    "elemento": "controle",
    "minHeight": 44,
    "paddingHorizontal": 12,
    "paddingVertical": 6,
    "papel": "button",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "fontWeight": "600",
    "texto": "Voltar ao retrato",
  },
  {
    "backgroundColor": "#F7F7F4",
    "borderColor": "rgba(65, 90, 119, 0.22)",
    "borderRadius": 14,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": "100%",
    "width": "100%",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 20,
    "fontWeight": "600",
    "texto": "X",
  },
  {
    "backgroundColor": "#778DA9",
    "elemento": "superfície",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "textAlign": "center",
    "texto": "Assine acima da linha",
  },
  {
    "borderColor": "#778DA9",
    "borderRadius": 8,
    "borderWidth": 1.5,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 10.5,
    "papel": "button",
    "width": "100%",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Limpar",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Salvar",
  },
]
`;

exports[`estilo das telas no tema dark login, início e configurações: configurações 1`] = `
[
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Aparência",
  },
  {
    "backgroundColor": "#1B263B",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Tema",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "texto": "Muda as cores do app. Documentos e PDFs continuam em papel claro.",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 10,
    "elemento": "superfície",
  },
  {
    "borderRadius": 7,
    "elemento": "controle",
    "minHeight": 44,
    "papel": "radio",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 15,
    "fontWeight": "600",
    "texto": "Claro",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 7,
    "elemento": "controle",
    "minHeight": 44,
    "papel": "radio",
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 15,
    "fontWeight": "600",
    "texto": "Escuro",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Gestos",
  },
  {
    "backgroundColor": "#1B263B",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Motor de gestos",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "texto": "Define como o selo é arrastado sobre o documento.",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 10,
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 7,
    "elemento": "controle",
    "minHeight": 44,
    "papel": "radio",
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 15,
    "fontWeight": "600",
    "texto": "PanResponder",
  },
  {
    "borderRadius": 7,
    "elemento": "controle",
    "minHeight": 44,
    "papel": "radio",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 15,
    "fontWeight": "600",
    "texto": "Reanimated",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Digitalização",
  },
  {
    "backgroundColor": "#1B263B",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Salvar cópia na galeria",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "texto": "Guarda a foto original do documento nas suas fotos.",
  },
  {
    "elemento": "controle",
    "onTintColor": "#778DA9",
    "papel": "switch",
    "thumbTintColor": "#E0E1DD",
    "tintColor": "#415A77",
  },
]
`;

exports[`estilo das telas no tema dark login, início e configurações: início 1`] = `
[
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 16,
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#C9CCC6",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": 28,
    "width": 28,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4279049002,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.7,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4279049002,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.7,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4279049002,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.7,
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 22,
    "fontWeight": "700",
    "letterSpacing": -0.3,
    "texto": "Assinar documento",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "texto": "Fotografe o documento, posicione uma assinatura salva e gere o PDF.",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4292927965,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4292927965,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Digitalizar documento",
  },
  {
    "backgroundColor": "#1B263B",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "elemento": "controle",
    "minHeight": 60,
    "paddingHorizontal": 16,
    "papel": "button",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 10,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Minhas assinaturas",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "backgroundColor": "rgba(119, 141, 169, 0.22)",
    "elemento": "superfície",
  },
  {
    "elemento": "controle",
    "minHeight": 60,
    "paddingHorizontal": 16,
    "papel": "button",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 10,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Histórico",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "backgroundColor": "rgba(119, 141, 169, 0.22)",
    "elemento": "superfície",
  },
  {
    "elemento": "controle",
    "minHeight": 60,
    "paddingHorizontal": 16,
    "papel": "button",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 10,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Configurações",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "backgroundColor": "#9E3B3B",
    "borderRadius": 6,
    "elemento": "controle",
    "minHeight": 44,
    "paddingHorizontal": 20,
    "paddingVertical": 10,
    "papel": "button",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4294243569,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4294243569,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4294243569,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#F4F4F1",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Sair",
  },
]
`;

exports[`estilo das telas no tema dark login, início e configurações: login 1`] = `
[
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "elemento": "imagem",
    "height": 200,
    "width": 200,
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 32,
    "fontWeight": "700",
    "letterSpacing": -0.5,
    "texto": "Assina Aqui",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "E-mail",
  },
  {
    "backgroundColor": "#1B263B",
    "borderColor": "rgba(119, 141, 169, 0.28)",
    "borderRadius": 8,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "color": "#E0E1DD",
    "elemento": "campo",
    "fontSize": 16,
    "placeholderTextColor": "#778DA9",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Senha",
  },
  {
    "backgroundColor": "#1B263B",
    "borderColor": "rgba(119, 141, 169, 0.28)",
    "borderRadius": 8,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "color": "#E0E1DD",
    "elemento": "campo",
    "fontSize": 16,
    "placeholderTextColor": "#778DA9",
  },
  {
    "elemento": "controle",
    "papel": "button",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Entrar",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 18,
    "lineHeight": 25,
    "maxWidth": 260,
    "textAlign": "center",
    "texto": "Criar conta",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 21,
    "lineHeight": 27,
    "maxWidth": 260,
    "textAlign": "center",
    "texto": "Entrar com biometria",
  },
]
`;

exports[`estilo das telas no tema light lista com assinatura: lista com assinatura 1`] = `
[
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#F4F4F1",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#F7F7F4",
    "borderColor": "rgba(65, 90, 119, 0.22)",
    "borderRadius": 8,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": "100%",
    "width": "100%",
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4279969339,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "numberOfLines": 1,
    "texto": "Rubrica",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 13,
    "fontVariant": [
      "tabular-nums",
    ],
    "texto": "Criada em 12/09/2026",
  },
  {
    "elemento": "controle",
    "height": 44,
    "papel": "button",
    "width": 44,
  },
  {
    "elemento": "svg",
    "height": 22,
    "width": 22,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeWidth": 1.8,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4292927965,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Nova assinatura",
  },
]
`;

exports[`estilo das telas no tema light lista vazia e nova assinatura em pé e deitada: lista vazia 1`] = `
[
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "textAlign": "center",
    "texto": "Nenhuma assinatura salva. Toque em Nova assinatura para desenhar a primeira.",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4292927965,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Nova assinatura",
  },
]
`;

exports[`estilo das telas no tema light lista vazia e nova assinatura em pé e deitada: nova assinatura 1`] = `
[
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Nome",
  },
  {
    "backgroundColor": "#F4F4F1",
    "borderColor": "rgba(65, 90, 119, 0.28)",
    "borderRadius": 8,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "color": "#0D1B2A",
    "elemento": "campo",
    "fontSize": 16,
    "placeholderTextColor": "#778DA9",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Assinatura",
  },
  {
    "borderColor": "#415A77",
    "borderRadius": 8,
    "borderWidth": 1.5,
    "elemento": "controle",
    "minHeight": 44,
    "paddingHorizontal": 12,
    "paddingVertical": 6,
    "papel": "button",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 14,
    "fontWeight": "600",
    "texto": "Deitar papel",
  },
  {
    "backgroundColor": "#F7F7F4",
    "borderColor": "rgba(65, 90, 119, 0.22)",
    "borderRadius": 14,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": "100%",
    "width": "100%",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 20,
    "fontWeight": "600",
    "texto": "X",
  },
  {
    "backgroundColor": "#778DA9",
    "elemento": "superfície",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "textAlign": "center",
    "texto": "Assine acima da linha",
  },
  {
    "borderColor": "#415A77",
    "borderRadius": 8,
    "borderWidth": 1.5,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 10.5,
    "papel": "button",
    "width": "100%",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Limpar",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Salvar",
  },
]
`;

exports[`estilo das telas no tema light lista vazia e nova assinatura em pé e deitada: nova assinatura deitada 1`] = `
[
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Assinatura",
  },
  {
    "borderColor": "#415A77",
    "borderRadius": 8,
    "borderWidth": 1.5,
    "elemento": "controle",
    "minHeight": 44,
    "paddingHorizontal": 12,
    "paddingVertical": 6,
    "papel": "button",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 14,
    "fontWeight": "600",
    "texto": "Voltar ao retrato",
  },
  {
    "backgroundColor": "#F7F7F4",
    "borderColor": "rgba(65, 90, 119, 0.22)",
    "borderRadius": 14,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": "100%",
    "width": "100%",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 20,
    "fontWeight": "600",
    "texto": "X",
  },
  {
    "backgroundColor": "#778DA9",
    "elemento": "superfície",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "textAlign": "center",
    "texto": "Assine acima da linha",
  },
  {
    "borderColor": "#415A77",
    "borderRadius": 8,
    "borderWidth": 1.5,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 10.5,
    "papel": "button",
    "width": "100%",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Limpar",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Salvar",
  },
]
`;

exports[`estilo das telas no tema light login, início e configurações: configurações 1`] = `
[
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Aparência",
  },
  {
    "backgroundColor": "#F4F4F1",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Tema",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "texto": "Muda as cores do app. Documentos e PDFs continuam em papel claro.",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 10,
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 7,
    "elemento": "controle",
    "minHeight": 44,
    "papel": "radio",
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 15,
    "fontWeight": "600",
    "texto": "Claro",
  },
  {
    "borderRadius": 7,
    "elemento": "controle",
    "minHeight": 44,
    "papel": "radio",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 15,
    "fontWeight": "600",
    "texto": "Escuro",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Gestos",
  },
  {
    "backgroundColor": "#F4F4F1",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Motor de gestos",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "texto": "Define como o selo é arrastado sobre o documento.",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 10,
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 7,
    "elemento": "controle",
    "minHeight": 44,
    "papel": "radio",
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 15,
    "fontWeight": "600",
    "texto": "PanResponder",
  },
  {
    "borderRadius": 7,
    "elemento": "controle",
    "minHeight": 44,
    "papel": "radio",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 15,
    "fontWeight": "600",
    "texto": "Reanimated",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Digitalização",
  },
  {
    "backgroundColor": "#F4F4F1",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Salvar cópia na galeria",
  },
  {
    "color": "#415A77",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "texto": "Guarda a foto original do documento nas suas fotos.",
  },
  {
    "elemento": "controle",
    "onTintColor": "#0D1B2A",
    "papel": "switch",
    "thumbTintColor": "#FAFAF8",
    "tintColor": "#C9CCC6",
  },
]
`;

exports[`estilo das telas no tema light login, início e configurações: início 1`] = `
[
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "borderRadius": 16,
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#1B263B",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": 28,
    "width": 28,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4292927965,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.7,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4292927965,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.7,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4292927965,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.7,
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 22,
    "fontWeight": "700",
    "letterSpacing": -0.3,
    "texto": "Assinar documento",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 14,
    "lineHeight": 20,
    "texto": "Fotografe o documento, posicione uma assinatura salva e gere o PDF.",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4279049002,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4279049002,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Digitalizar documento",
  },
  {
    "backgroundColor": "#F4F4F1",
    "borderRadius": 14,
    "elemento": "superfície",
  },
  {
    "elemento": "controle",
    "minHeight": 60,
    "paddingHorizontal": 16,
    "papel": "button",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 10,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Minhas assinaturas",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "backgroundColor": "rgba(65, 90, 119, 0.18)",
    "elemento": "superfície",
  },
  {
    "elemento": "controle",
    "minHeight": 60,
    "paddingHorizontal": 16,
    "papel": "button",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 10,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Histórico",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "backgroundColor": "rgba(65, 90, 119, 0.18)",
    "elemento": "superfície",
  },
  {
    "elemento": "controle",
    "minHeight": 60,
    "paddingHorizontal": 16,
    "papel": "button",
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 10,
    "elemento": "superfície",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4282473079,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 1.8,
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Configurações",
  },
  {
    "elemento": "svg",
    "height": 20,
    "width": 20,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "backgroundColor": "#9E3B3B",
    "borderRadius": 6,
    "elemento": "controle",
    "minHeight": 44,
    "paddingHorizontal": 20,
    "paddingVertical": 10,
    "papel": "button",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4294243569,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4294243569,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4294243569,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "color": "#F4F4F1",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Sair",
  },
]
`;

exports[`estilo das telas no tema light login, início e configurações: login 1`] = `
[
  {
    "backgroundColor": "#E0E1DD",
    "elemento": "superfície",
  },
  {
    "backgroundColor": "#0D1B2A",
    "elemento": "superfície",
  },
  {
    "elemento": "imagem",
    "height": 200,
    "width": 200,
  },
  {
    "color": "#E0E1DD",
    "elemento": "texto",
    "fontSize": 32,
    "fontWeight": "700",
    "letterSpacing": -0.5,
    "texto": "Assina Aqui",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "E-mail",
  },
  {
    "backgroundColor": "#1B263B",
    "borderColor": "rgba(119, 141, 169, 0.28)",
    "borderRadius": 8,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "color": "#E0E1DD",
    "elemento": "campo",
    "fontSize": 16,
    "placeholderTextColor": "#778DA9",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.6,
    "textTransform": "uppercase",
    "texto": "Senha",
  },
  {
    "backgroundColor": "#1B263B",
    "borderColor": "rgba(119, 141, 169, 0.28)",
    "borderRadius": 8,
    "borderWidth": 1,
    "elemento": "superfície",
  },
  {
    "color": "#E0E1DD",
    "elemento": "campo",
    "fontSize": 16,
    "placeholderTextColor": "#778DA9",
  },
  {
    "elemento": "controle",
    "papel": "button",
  },
  {
    "elemento": "svg",
    "height": 18,
    "width": 18,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "elemento": "traço",
    "stroke": {
      "payload": 4286025129,
      "type": 0,
    },
    "strokeLinecap": 1,
    "strokeLinejoin": 1,
    "strokeWidth": 2,
  },
  {
    "backgroundColor": "#E0E1DD",
    "borderRadius": 8,
    "elemento": "controle",
    "minHeight": 48,
    "paddingHorizontal": 28,
    "paddingVertical": 12,
    "papel": "button",
    "width": "100%",
  },
  {
    "color": "#0D1B2A",
    "elemento": "texto",
    "fontSize": 16,
    "fontWeight": "600",
    "texto": "Entrar",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 18,
    "lineHeight": 25,
    "maxWidth": 260,
    "textAlign": "center",
    "texto": "Criar conta",
  },
  {
    "color": "#778DA9",
    "elemento": "texto",
    "fontSize": 21,
    "lineHeight": 27,
    "maxWidth": 260,
    "textAlign": "center",
    "texto": "Entrar com biometria",
  },
]
`;
